# crud-fastapi-sqlmodel-docker-postgresql-reactjs

./: .gitignore  README.md  pyproject.toml
123/: package.json
123/src/: index.js
backend/: index.py
backend/config/: __init__.py  db.py
backend/models/: user.py
backend/routes/: user.py
backend/schemas/: __init__.py  user.py
reactapp/: README.md  package-lock.json
reactapp/src/: App.js
