[tool.poetry]
name = "crud-fastapi-sqlmodel-postgresql-reactjs"
version = "0.1.0"
description = ""
authors = ["keyj9 <kyrillos.joe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
config = "^0.5.1"
sqlmodel = "^0.0.6"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
